# SysMonTask

./: #taskManager.glade#  .buildconfig  .gitignore  1exp.py  AUTHORS  DOCS.md  HISTORY.md  LICENSE  MANIFEST.in  README.md  SysMonTask.desktop  cached_icons  com.github.camelneeraj.sysmontask.gschema.xml  disk.glade  disk.glade~  disk.py  diskSidepane.glade  diskSidepane.glade~  exp.glade  exp.glade~  exp.py  gpu.glade  gpu.glade~  gpu.py  gpuSidepane.glade  gpuSidepane.glade~  mem.py  meson.build  net.glade  net.glade~  net.py  netSidepane.glade  netSidepane.glade~  proc.py  requirements.md  setup.py  sidepane.py  sysmontask.glade  sysmontask.py  taskManager.glade  (+7 more)
build-aux/meson/: install.py  postinstall.py
data/: com.github.KrispyCamel4u.sysmontask.appdata.xml.in  com.github.KrispyCamel4u.sysmontask.desktop.in  com.github.KrispyCamel4u.sysmontask.gschema.xml  help_window.ui  interface.ui  interface.ui~  menus.ui  meson.build
debian/: changelog  control  copyright  files  rules
glade_files/: #disk.glade#  #sysmontask.glade#  disk.glade  diskSidepane.glade  filter_dialog.glade  filter_dialog.glade~  gpu.glade  gpu.glade~  gpuSidepane.glade  meson.build  net.glade  net.glade~  netSidepane.glade  sysmontask.glade  sysmontask.glade~
icons/: reset-color.png~
po/: POTFILES  meson.build  sysmontask.pot
sysmontask/: ConfigBind.py  Configurations.py  Dialogs.py  Log.py  PrettyProcTable.py  Proc.py  ProcTable.py  TreeView.py  Util.py  WinCreater.py  __init__.py  cpu.py  disk.py  filter_prefs.py  gproc.py  gpu.py  log_plotter.py  main.py  mem.py  meson.build  move.sh  net.py  proc-kill.sh  proc.py  proc_cinnamon.py  proc_xfce.py  rooter.py  rooter_default.py  sidepane.py  style.css  sysmontask.bak.py  sysmontask.py  sysmontask.spec  theme_setter.py  uninstall_for_pip.sh
